# turingtoy

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  testcode.sh  turingtoy.py
.devenv/: __main__.py  bash_init.sh
src/turingtoy/: __init__.py
tests/: conftest.py  test_turing.py  utils.py
tests/data/add_two_binary_numbers/: 1011+11001.json  1011+11001.old.json  11+1.json  11+1.old.json
tests/data/binary_multiplication/: 11x101.json  11x101.old.json
tests/data/double_1/: 1.json  1.old.json  111.json  111.old.json
